完成树状视图翻译

--- a/4. 扩展指南/6. 树状视图.md
+++ b/4. 扩展指南/6. 树状视图.md
@@ -61,9 +61,9 @@
 
 您必须为视图指定一个标识符和名称，然后您可以贡献在如下位置：
 
-- `explorer`：边栏浏览器视图
-- `debug`：边栏的运行调试视图
-- `scm`：边栏的源代码控制视图
+- `explorer`：边栏管理器视图
+- `debug`：边栏的运行和调试视图
+- `scm`：边栏的源代码管理视图
 - `test`：边栏的测试视图
 - [自定义视图容器](#视图容器)
 
@@ -76,3 +76,400 @@
 - `getChildren(element?: T): ProviderResult<T[]>` - 这个方法的实现给定`element`或根（如果不传递元素）的子节点
 - `getTreeItem(element: T): TreeItem | Thenable<TreeItem>` - 这个方法的实现返回UI元素在视图中显示的表达([TreeItem](/9.%20参考/1.%20VS%20Code%20API.md#TreeItem))
 
+当用户打开树状视图，`getChildren`方法会被以无`element`参数的方式调用。从这，您的`TreeDataProvider`应该返回您的树顶级项目。在我们的例子中，树顶级项目的`collapsibleState`是`TreeItemCollapsibleState.Collapsed`，意思是树顶级项目将折叠展示。将`collapsibleState`设置为`collapsibleState.Expanded`将使树项目展开展示。使`collapsibleState`保留默认值`TreeItemCollapsibleState.None`表明树项目不拥有子项目。`getChildren`不会被`collapsibleState`为`TreeItemCollapsibleState.None`的树项目调用
+
+下面是`TreeDataProvider`的一个例子，实现提供Node依赖数据
+
+```typescript
+import * as vscode from 'vscode';
+import * as fs from 'fs';
+import * as path from 'path';
+
+export class NodeDependenciesProvider implements vscode.TreeDataProvider<Dependency> {
+  constructor(private workspaceRoot: string) {}
+
+  getTreeItem(element: Dependency): vscode.TreeItem {
+    return element;
+  }
+
+  getChildren(element?: Dependency): Thenable<Dependency[]> {
+    if (!this.workspaceRoot) {
+      vscode.window.showInformationMessage('No dependency in empty workspace');
+      return Promise.resolve([]);
+    }
+
+    if (element) {
+      return Promise.resolve(
+        this.getDepsInPackageJson(
+          path.join(this.workspaceRoot, 'node_modules', element.label, 'package.json')
+        )
+      );
+    } else {
+      const packageJsonPath = path.join(this.workspaceRoot, 'package.json');
+      if (this.pathExists(packageJsonPath)) {
+        return Promise.resolve(this.getDepsInPackageJson(packageJsonPath));
+      } else {
+        vscode.window.showInformationMessage('Workspace has no package.json');
+        return Promise.resolve([]);
+      }
+    }
+  }
+
+  /**
+   * 给出package.json的路径，读取它所有的dependencies和devDependencies
+   */
+  private getDepsInPackageJson(packageJsonPath: string): Dependency[] {
+    if (this.pathExists(packageJsonPath)) {
+      const toDep = (moduleName: string, version: string): Dependency => {
+        if (this.pathExists(path.join(this.workspaceRoot, 'node_modules', moduleName))) {
+          return new Dependency(
+            moduleName,
+            version,
+            vscode.TreeItemCollapsibleState.Collapsed
+          );
+        } else {
+          return new Dependency(moduleName, version, vscode.TreeItemCollapsibleState.None);
+        }
+      };
+
+      const packageJson = JSON.parse(fs.readFileSync(packageJsonPath, 'utf-8'));
+
+      const deps = packageJson.dependencies
+        ? Object.keys(packageJson.dependencies).map(dep =>
+            toDep(dep, packageJson.dependencies[dep])
+          )
+        : [];
+      const devDeps = packageJson.devDependencies
+        ? Object.keys(packageJson.devDependencies).map(dep =>
+            toDep(dep, packageJson.devDependencies[dep])
+          )
+        : [];
+      return deps.concat(devDeps);
+    } else {
+      return [];
+    }
+  }
+
+  private pathExists(p: string): boolean {
+    try {
+      fs.accessSync(p);
+    } catch (err) {
+      return false;
+    }
+    return true;
+  }
+}
+
+class Dependency extends vscode.TreeItem {
+  constructor(
+    public readonly label: string,
+    private version: string,
+    public readonly collapsibleState: vscode.TreeItemCollapsibleState
+  ) {
+    super(label, collapsibleState);
+    this.tooltip = `${this.label}-${this.version}`;
+    this.description = this.version;
+  }
+
+  iconPath = {
+    light: path.join(__filename, '..', '..', 'resources', 'light', 'dependency.svg'),
+    dark: path.join(__filename, '..', '..', 'resources', 'dark', 'dependency.svg')
+  };
+}
+```
+
+### 注册TreeDataProvider
+
+第三步是注册上面的数据提供者到您的视图
+
+这可以通过以下方式做到：
+
+- `vscode.window.registerTreeDataProvider` - 通过提供已注册的视图ID和上面的数据提供者注册树数据提供者
+
+```typescript
+const rootPath =
+  vscode.workspace.workspaceFolders && vscode.workspace.workspaceFolders.length > 0
+    ? vscode.workspace.workspaceFolders[0].uri.fsPath
+    : undefined;
+vscode.window.registerTreeDataProvider(
+  'nodeDependencies',
+  new NodeDependenciesProvider(rootPath)
+);
+```
+
+- `vscode.window.createTreeView` - 通过提供已注册视图ID和上面的数据提供者创建树状视图。这将给予您用于执行其他视图操作的[TreeView](/9.%20参考/1.%20VS%20Code%20API.md#TreeView)的访问权限
+
+```typescript
+vscode.window.createTreeView('nodeDependencies', {
+  treeDataProvider: new NodeDependenciesProvider(rootPath)
+});
+```
+
+这是正在运行的扩展：
+![](https://code.visualstudio.com/assets/api/extension-guides/tree-view/view.png)
+
+### 更新树状视图内容
+
+我们的Node依赖视图太单调，并且一旦数据展示，它不会更新。然而，视图中的刷新按钮和通过当前`package.json`的内容更新Node依赖会很有用。为了做到这样，我们可以使用`onDidChangeTreeData`事件
+
+- `onDidChangeTreeData? : Event<T | undefined | null | void>` - 如果您的树数据可以更改并且您希望更新树，实现这个方法
+
+将下面的代码添加到您的`NodeDependenciesProvider`
+
+```typescript
+ private _onDidChangeTreeData: vscode.EventEmitter<Dependency | undefined | null | void> = new vscode.EventEmitter<Dependency | undefined | null | void>();
+  readonly onDidChangeTreeData: vscode.Event<Dependency | undefined | null | void> = this._onDidChangeTreeData.event;
+
+  refresh(): void {
+    this._onDidChangeTreeData.fire();
+  }
+```
+
+现在我们拥有一个刷新方法，但没有任何地方调用它，我们可以添加一个命令调用刷新
+
+在您的`package.json`的`contributes`字段添加：
+
+```json
+    "commands": [
+            {
+                "command": "nodeDependencies.refreshEntry",
+                "title": "Refresh",
+                "icon": {
+                    "light": "resources/light/refresh.svg",
+                    "dark": "resources/dark/refresh.svg"
+                }
+            },
+    ]
+```
+
+然后在您的扩展激活方法中注册命令：
+
+```typescript
+import * as vscode from 'vscode';
+import { NodeDependenciesProvider } from './nodeDependencies';
+
+export function activate(context: vscode.ExtensionContext) {
+  const rootPath =
+    vscode.workspace.workspaceFolders && vscode.workspace.workspaceFolders.length > 0
+      ? vscode.workspace.workspaceFolders[0].uri.fsPath
+      : undefined;
+  const nodeDependenciesProvider = new NodeDependenciesProvider(rootPath);
+  vscode.window.registerTreeDataProvider('nodeDependencies', nodeDependenciesProvider);
+  vscode.commands.registerCommand('nodeDependencies.refreshEntry', () =>
+    nodeDependenciesProvider.refresh()
+  );
+}
+```
+
+现在我们拥有一个会刷新Node依赖视图的命令，但有一个在视图上的按钮会更好。我们已经给命令添加了`icon`（图标），所以图标将在添加到视图时出现
+
+在您的`package.json`的`contributes`字段添加：
+
+```json
+"menus": {
+    "view/title": [
+        {
+            "command": "nodeDependencies.refreshEntry",
+            "when": "view == nodeDependencies",
+            "group": "navigation"
+        },
+    ]
+}
+```
+
+## 启用
+
+重要的是您的扩展仅当用户需要您的扩展提供的功能时启用。在此情况下，您应该仅当何时用户开始使用视图时启用扩展。当您的扩展声明了一个视图贡献时VS Code为您自动完成了这个功能。VS Code放出了一个activationEvent [onView:${viewId}](/9.%20参考/3.%20启用事件.md#onView)（上面的例子是：onView:nodeDependencies），当用户打开视图时启用
+
+> **注：**对于低于版本1.74.0的VS Code，您必须清楚地在`package.json`中给VS Code注册这个启用事件来在这个视图启用您的扩展
+
+```json
+"activationEvents": [
+       "onView:nodeDependencies",
+],
+```
+
+## 视图容器
+
+一个视图容器包含一列在连同着内建视图容器的活动栏或面板的视图。内建视图容器的例子是源代码管理和管理器
+
+![](https://code.visualstudio.com/assets/api/extension-guides/tree-view/view-container.png)
+
+为了贡献一个视图容器，您应该首先使用`package.json`中的[contributes.viewsContainers](/9.%20参考/2.%20贡献点.md#contributes.viewsContainers)贡献点注册它
+
+您需要指定一下字段：
+
+- `id` - 您创建的新视图容器ID
+- `title` - 将显示在视图容器顶部的名称
+- `icon` - 在活动栏中将为视图容器显示的一个图像
+
+```json
+"contributes": {
+  "viewsContainers": {
+    "activitybar": [
+      {
+        "id": "package-explorer",
+        "title": "Package Explorer",
+        "icon": "media/dep.svg"
+      }
+    ]
+  }
+}
+```
+
+或者，您可以通过将其放置在`place`节点贡献这个视图给面板
+
+## 贡献视图给视图容器
+
+一旦您创建了一个视图容器，您可以在`package.json`中使用[contributes.views](/9.%20参考/2.%20贡献点.md#contributes.views)贡献点
+
+```json
+"contributes": {
+  "views": {
+    "package-explorer": [
+      {
+        "id": "nodeDependencies",
+        "name": "Node Dependencies",
+        "icon": "media/dep.svg",
+        "contextualTitle": "Package Explorer"
+      }
+    ]
+  }
+}
+```
+
+一个视图可以有一个可选可设置为`visible`、`collapsed`或`hidden`的`visibility`属性。这个属性仅在VS Code第一次第一次使用这个选项打开工作空间时显得重要。在那之后，可见设置为用户选择的选项。如果您有一个具有许多视图视图容器或您的视图不会对每位扩展用户来说重要，考虑设置视图`consider`或`hidden`。一个`hidden`视图将出现在视图容器“视图”菜单
+
+![](https://code.visualstudio.com/assets/api/extension-guides/tree-view/views-menu.png)
+
+## 视图操作
+
+操作作为在您树项目中的在、树项目上下文菜单和视图标题的视图顶部行内图标使用。操作是您通过在`package.json`中添加贡献点设置在这些位置出现的命令
+
+为了贡献在这三个地点，您可以在package.json使用下面的菜单贡献点
+
+- `view/title` - 在视图标题中显示操作的位置。主要或内联操作使用`"group": "navigation"`，剩下在`...`菜单中的是次要的操作。
+- `view/item/context` - 给树项目显示操作的位置。内联操作使用`"group": "navigation"`，剩下在`...`菜单中的是次要的操作。
+
+您可以使用一个[时间状语从句](/9.%20参考/6.%20时间状语上下文.md)控制这些操作的可见
+
+![](https://code.visualstudio.com/assets/api/extension-guides/tree-view/view-actions.png)
+
+示例：
+
+```json
+"contributes": {
+  "commands": [
+    {
+      "command": "nodeDependencies.refreshEntry",
+      "title": "Refresh",
+      "icon": {
+        "light": "resources/light/refresh.svg",
+        "dark": "resources/dark/refresh.svg"
+      }
+    },
+    {
+      "command": "nodeDependencies.addEntry",
+      "title": "Add"
+    },
+    {
+      "command": "nodeDependencies.editEntry",
+      "title": "Edit",
+      "icon": {
+        "light": "resources/light/edit.svg",
+        "dark": "resources/dark/edit.svg"
+      }
+    },
+    {
+      "command": "nodeDependencies.deleteEntry",
+      "title": "Delete"
+    }
+  ],
+  "menus": {
+    "view/title": [
+      {
+        "command": "nodeDependencies.refreshEntry",
+        "when": "view == nodeDependencies",
+        "group": "navigation"
+      },
+      {
+        "command": "nodeDependencies.addEntry",
+        "when": "view == nodeDependencies"
+      }
+    ],
+    "view/item/context": [
+      {
+        "command": "nodeDependencies.editEntry",
+        "when": "view == nodeDependencies && viewItem == dependency",
+        "group": "inline"
+      },
+      {
+        "command": "nodeDependencies.deleteEntry",
+        "when": "view == nodeDependencies && viewItem == dependency"
+      }
+    ]
+  }
+}
+```
+
+默认操作按照字母顺序。为了指定一个不同的顺序，如果您想要分类，按照顺序在之后添加`@`。例如，`navigation@3`将使操作在`navigation`组第三个出现
+
+您可以通过创建不同组在`...`菜单分割更多项目。这些组名是任意的并且根据组名按字母顺序排序
+
+> **注：**如果您想要为指定的树项目展示操作，您可以通过使用`TreeItems.contextValue`定义树项目上下文，然后您可以在`when`表达式中为`viewItem`指定上下文值
+
+示例：
+
+```json
+"contributes": {
+  "menus": {
+    "view/item/context": [
+      {
+        "command": "nodeDependencies.deleteEntry",
+        "when": "view == nodeDependencies && viewItem == dependency"
+      }
+    ]
+  }
+}
+```
+
+## 欢迎内容
+
+如果您的视图可以为空，或者如果您想要给另一个扩展空视图添加欢迎内容，您可以贡献`viewWelcome`内容。一个空视图是一个不具有`TreeView.message`和具有空树的视图
+
+```json
+"contributes": {
+  "viewsWelcome": [
+    {
+      "view": "nodeDependencies",
+      "contents": "No node dependencies found [learn more](https://www.npmjs.com/).\n[Add Dependency](command:nodeDependencies.addEntry)"
+    }
+  ]
+}
+```
+
+![](https://code.visualstudio.com/assets/api/extension-guides/tree-view/welcome-content.png)
+
+欢迎内容中链接受支持。按照惯例，一个独自成行的链接是一个按钮。每个欢迎内容同样可以包含一个[时间状语从句](/9.%20参考/6.%20时间状语上下文.md)。想要更多例子，参阅[内建Git扩展](https://github.com/microsoft/vscode/tree/main/extensions/git)
+
+## TreeDataProvider
+
+扩展编写者应该编程注册一个[TreeDataProvider](/9.%20参考/1.%20VS%20Code%20API.md#TreeDataProvider)在视图中输入数据
+
+```typescript
+vscode.window.registerTreeDataProvider('nodeDependencies', new DepNodeProvider());
+```
+
+参阅`tree-view-sample`中的[nodeDependencies.ts](https://github.com/microsoft/vscode-extension-samples/tree/main/tree-view-sample/src/nodeDependencies.ts)的实现
+
+## TreeView
+
+如果您想要编程在视图上显示一些UI操作，您可以使用`window.createTreeView`而不是`window.registerTreeDataProvider`。这将给您访问视图用来显示视图操作的权限
+
+```typescript
+vscode.window.createTreeView('ftpExplorer', {
+  treeDataProvider: new FtpTreeDataProvider()
+});
+```
+
+参阅`tree-view-sample`中的[ftpExplorer.ts](https://github.com/microsoft/vscode-extension-samples/tree/main/tree-view-sample/src/ftpExplorer.ts)的实现
