更新译名；完成部分Web视图翻译

--- a/4. 扩展指南/1. 概览.md
+++ b/4. 扩展指南/1. 概览.md
@@ -18,7 +18,7 @@
 | [文件图标主题](4.%20%E6%96%87%E4%BB%B6%E5%9B%BE%E6%A0%87%E4%B8%BB%E9%A2%98.md) | [contributes.iconThemes](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.iconThemes) |
 | [产品图标主题](5.%20%E4%BA%A7%E5%93%81%E5%9B%BE%E6%A0%87%E4%B8%BB%E9%A2%98.md) | [contributes.productIconThemes](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.productIconThemes) |
 | [树状视图](6.%20%E6%A0%91%E7%8A%B6%E8%A7%86%E5%9B%BE.md) | [window.createTreeView](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerTreeDataProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [TreeView](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TreeView<T>)<br/> [TreeDataProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TreeDataProvider)<br/>[contributes.views](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.views)<br/>[contributes.viewContainers](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.viewContainers) |
-| [网络视图](7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md) | [window.createWebviewPanel](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerWebviewPanelSerializer](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) |
+| [Web视图](7.%20Web视图.md) | [window.createWebviewPanel](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerWebviewPanelSerializer](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) |
 | [自定义编辑器](9.%20%E8%87%AA%E5%AE%9A%E4%B9%89%E7%BC%96%E8%BE%91%E5%99%A8.md) | [window.registerCustomEditorProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [CustomTextEditorProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#CustomTextEditorProvider) <br/> [contributes.customEditors](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.customEditors) |
 | [虚拟文档](10.%20%E8%99%9A%E6%8B%9F%E6%96%87%E6%A1%A3.md) | [workspace.registerTextDocumentContentProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) <br/> [commands.registerCommand](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#commands) <br/> [window.showInputBox](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) |
 | [虚拟工作空间](11.%20%E8%99%9A%E6%8B%9F%E5%B7%A5%E4%BD%9C%E7%A9%BA%E9%97%B4.md) | [workspace.fs](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) <br/> capabilities.virtualWorkspaces |
@@ -33,7 +33,7 @@
 这里是一列额外的[VS Code 扩展示例仓库](https://github.com/microsoft/vscode-extension-samples)示例
 | GitHub 仓库示例 | API & 贡献点 |
 | - | - |
-| [网络视图示例](https://github.com/microsoft/vscode-extension-samples/tree/main/webview-sample) | [window.createWebviewPanel](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerWebviewPanelSerializer](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) |
+| [Web视图示例](https://github.com/microsoft/vscode-extension-samples/tree/main/webview-sample) | [window.createWebviewPanel](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerWebviewPanelSerializer](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) |
 | [状态栏示例](https://github.com/microsoft/vscode-extension-samples/tree/main/statusbar-sample) | [window.createStatusBarItem](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [StatusBarItem](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#StatusBarItem) |
 | [树状视图示例](https://github.com/microsoft/vscode-extension-samples/tree/main/tree-view-sample) | [window.createTreeView](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerTreeDataProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [TreeView](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TreeView) <br/> [TreeDataProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TreeDataProvider) <br/> [contributes.views](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.views) <br/> [contributes.viewContainers](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.viewContainers) | 
 | [任务提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/task-provider-sample) | [tasks.registerTaskProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#tasks) <br/> [Tasks](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#Tasks) <br/> [ShellExecution](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#ShellExecution) <br/> [contributes.taskDefinitions](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.taskDefinitions) |
