--- a/4. 扩展指南/2. 命令.md
+++ b/4. 扩展指南/2. 命令.md
@@ -38,7 +38,7 @@ async function printDefinitionsForActiveEditor() {
 - [浏览键盘快捷键](https://code.visualstudio.com/docs/getstarted/keybindings)
 - [仔细查看VS Code内建高级命令API](/9.%20%E5%8F%82%E8%80%83/5.%20%E5%86%85%E5%BB%BA%E5%91%BD%E4%BB%A4.md)
 ### 命令URI
-命令URI是执行给定命令的链接。它们可以作为在悬停文本上作为可点击链接、补全项详情或网络视图内使用
+命令URI是执行给定命令的链接。它们可以作为在悬停文本上作为可点击链接、补全项详情或Web视图内使用
 
 一个命令URI使用`command`方案后跟命令名。例如`editor.action.addCommentLine`命令URI是`command:editor.action.addCommentLine`。这里是一个在可用文本编辑器当前行注释展示链接悬停提供器
 ```typescript
@@ -92,7 +92,7 @@ export function activate(context: vscode.ExtensionContext) {
   );
 }
 ```
-当网络视图被创建时，您可以在[网络视图](7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md)中通过在`WebviewOptions`设置`enableCommandUris`启用命令URI
+当Web视图被创建时，您可以在[Web视图](7.%20Web视图.md)中通过在`WebviewOptions`设置`enableCommandUris`启用命令URI
 ## 创建命令
 ### 注册一个命令
 [`vscode.commands.registerCommand`]在您的扩展中绑定命令ID到一个处理函数
