--- a/1. 概览.md
+++ b/1. 概览.md
@@ -11,7 +11,7 @@ Visual Studio Code在构建时考虑了可扩展性。从UI到编辑体验，几
 这里是你可以用扩展API实现的一些实例
 - 使用颜色或文件图标主题更改VS Code的外观 - [主题](3.%20%E6%89%A9%E5%B1%95%E8%83%BD%E5%8A%9B/3.%20%E4%B8%BB%E9%A2%98.md)
 - 在UI中添加自定义组件与视图 - [扩展工作台](3.%20%E6%89%A9%E5%B1%95%E5%8A%9F%E8%83%BD/4.%20%E6%89%A9%E5%B1%95%E5%B7%A5%E4%BD%9C%E5%8F%B0.md)
-- 创建一个网络视图以显示一个通过HTML/CSS/JS构建的自定义网页 - [网络视图指南](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md)
+- 创建一个Web以显示一个通过HTML/CSS/JS构建的自定义网页 - [Web视图指南](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/7.%20Web视图.md)
 - 支持一个新的编程语言 - [语言扩展概览](6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/1.%20%E6%A6%82%E8%A7%88.md)
 - 支持调试一个特定的运行时 - [调试器扩展指南](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/16.%20%E8%B0%83%E8%AF%95%E5%99%A8%E6%89%A9%E5%B1%95.md)
 如果你想有更多扩展应用程序接口综合概论，参考[扩展功能概览](3.%20%E6%89%A9%E5%B1%95%E5%8A%9F%E8%83%BD/1.%20%E6%A6%82%E8%A7%88.md)页，[扩展指南概览](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)同样包括一列示例代码和各种各样扩展应用程序接口用途的说明
