完成部分Web视图翻译

--- a/4. 扩展指南/7. Web视图.md
+++ b/4. 扩展指南/7. Web视图.md
@@ -206,3 +206,92 @@ function getWebviewContent(cat: keyof typeof cats) {
 
 上面的示例同样使用`webview.title`来更改显示在编辑器中的文档的标题。设置标题不会使Web视图重载
 
+### 生命周期
+
+创建Web视图面板的扩展拥有它们。扩展必须与`createWebviewPanel`返回的Web视图保持联系。如果您的扩展丢失联系，就不再能获得Web视图的访问权，即使Web视图能继续在VS Code中显示
+
+与文本编辑器类似，用户也可以在任何时候关闭一个Web视图。当用户这么做时，Web视图本身会被销毁。尝试销毁一个Web视图会抛出一个异常，这意味着上面使用`setInterval`的示例其实有一个重要漏洞：如果用户关闭面板，将尝试更新`panel.webview.html`的`setInterval`会继续触发，当然会发生异常。猫讨厌异常。让我们修复它
+
+Web视图销毁时`onDidDispose`事件会触发。我们可以使用这个事件取消进一步的更新并清理Web视图的资源：
+
+```typescript
+import * as vscode from 'vscode';
+
+const cats = {
+  'Coding Cat': 'https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif',
+  'Compiling Cat': 'https://media.giphy.com/media/mlvseq9yvZhba/giphy.gif'
+};
+
+export function activate(context: vscode.ExtensionContext) {
+  context.subscriptions.push(
+    vscode.commands.registerCommand('catCoding.start', () => {
+      const panel = vscode.window.createWebviewPanel(
+        'catCoding',
+        'Cat Coding',
+        vscode.ViewColumn.One,
+        {}
+      );
+
+      let iteration = 0;
+      const updateWebview = () => {
+        const cat = iteration++ % 2 ? 'Compiling Cat' : 'Coding Cat';
+        panel.title = cat;
+        panel.webview.html = getWebviewContent(cat);
+      };
+
+      updateWebview();
+      const interval = setInterval(updateWebview, 1000);
+
+      panel.onDidDispose(
+        () => {
+          //当面板关闭时，取消Web视图内容任何进一步的更新
+          clearInterval(interval);
+        },
+        null,
+        context.subscriptions
+      );
+    })
+  );
+}
+```
+
+扩展可以在Web视图通过调用`dispose()`编程关闭Web视图。例如，如果我们想限制我们的猫的工作日到五秒：
+
+```typescript
+
+export function activate(context: vscode.ExtensionContext) {
+  context.subscriptions.push(
+    vscode.commands.registerCommand('catCoding.start', () => {
+      const panel = vscode.window.createWebviewPanel(
+        'catCoding',
+        'Cat Coding',
+        vscode.ViewColumn.One,
+        {}
+      );
+
+      panel.webview.html = getWebviewContent(cats['Coding Cat']);
+
+      // 5秒后，编程关闭Web视图面板
+      const timeout = setTimeout(() => panel.dispose(), 5000);
+
+      panel.onDidDispose(
+        () => {
+          // 在五秒前处理用户关闭面板
+          clearTimeout(timeout);
+        },
+        null,
+        context.subscriptions
+      );
+    })
+  );
+}
+
+```
+
+## 可见性和移动
+
+当Web视图面板移动到后台栏时，它会隐藏。然而它没有销毁。当Web面板移动到前台时，VS Code会自动从`webview.html`恢复Web视图的内容。
+
+![](https://code.visualstudio.com/assets/api/extension-guides/webview/basics-restore.gif)
+
+`.visible`属性告诉您当前的Web视图面板是否可见
