提交Web视图部分翻译

--- a/2. 开始/1. 您的第一个扩展.md
+++ b/2. 开始/1. 您的第一个扩展.md
@@ -32,7 +32,7 @@ yo code
 让我们对消息做一些更改
 
 1. 在`extension.ts`更改消息“Hello World from HelloWorld”为“Hello VS Code”
-2. 在新窗口中运行**Developer: Reload Window**（开发者：重新加载窗口）
+2. 在新窗口中运行**Developer: Reload Window**（开发人员：重新加载窗口）
 3. 再次运行命令**Hello World**
 
 您应该看到更新的消息弹出
