翻译部分Web视图

--- a/4. 扩展指南/7. Web视图.md
+++ b/4. 扩展指南/7. Web视图.md
@@ -554,3 +554,21 @@ body[data-vscode-theme-id="One Dark Pro"] {
     background: hotpink;
 }
 ```
+
+### 支持的媒体格式
+
+Web视图支持音频和视频，然而不是每种媒体解码器或媒体文件容器类型都受支持
+
+下列是可以在Web视图中使用的音频格式：
+
+- Wac
+- Mp3
+- Ogg
+- Flac
+
+下列是可以在Web视图使用的视频格式
+
+- H.264
+- VP8
+
+对于视频文件，确保视频和音频轨道媒体格式都受支持。例如许多`.mp4`文件使用`H.264`视频和`AAC`音频。VS Code将会播放`mp4`的视频部分，但因为`AAC`音频不受支持，所以不会有任何声音。您需要使用`mp4`音频轨道替代
