--- a/4. 扩展指南/7. Web视图.md
+++ b/4. 扩展指南/7. Web视图.md
@@ -789,3 +789,155 @@ function getWebviewContent() {
 
 ![](https://code.visualstudio.com/assets/api/extension-guides/webview/scripts-extension_to_webview.gif)
 
+# 从一个Web视图传递消息给扩展
+
+Web视图也可以传递消息回给扩展。这可以在Web视图内的特殊VS Code API对象使用`postMessage`函数实现。为了访问VS Code API对象，在Web视图中调用`acquireVsCodeApi`。这个函数一段时间内仅能调用一次。您必须紧紧把握住这个方法返回的VS Code API实例，并且将其传递到任何您需要使用的函数中
+
+当我们的猫在代码中遇到一个漏洞时，我们可以在我们的**Cat Coding**Web视图中使用VS Code API和`postMessage`来向扩展报警
+
+```typescript
+export function activate(context: vscode.ExtensionContext) {
+  context.subscriptions.push(
+    vscode.commands.registerCommand('catCoding.start', () => {
+      const panel = vscode.window.createWebviewPanel(
+        'catCoding',
+        'Cat Coding',
+        vscode.ViewColumn.One,
+        {
+          enableScripts: true
+        }
+      );
+
+      panel.webview.html = getWebviewContent();
+
+      // 从Web视图传递消息
+      panel.webview.onDidReceiveMessage(
+        message => {
+          switch (message.command) {
+            case 'alert':
+              vscode.window.showErrorMessage(message.text);
+              return;
+          }
+        },
+        undefined,
+        context.subscriptions
+      );
+    })
+  );
+}
+
+function getWebviewContent() {
+  return `<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cat Coding</title>
+</head>
+<body>
+    <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" width="300" />
+    <h1 id="lines-of-code-counter">0</h1>
+
+    <script>
+        (function() {
+            const vscode = acquireVsCodeApi();
+            const counter = document.getElementById('lines-of-code-counter');
+
+            let count = 0;
+            setInterval(() => {
+                counter.textContent = count++;
+
+                // 当我们的猫遇到漏洞时向扩展报警
+                if (Math.random() < 0.001 * count) {
+                    vscode.postMessage({
+                        command: 'alert',
+                        text: '🐛  on line ' + count
+                    })
+                }
+            }, 100);
+        }())
+    </script>
+</body>
+</html>`;
+}
+```
+
+![](https://code.visualstudio.com/assets/api/extension-guides/webview/scripts-webview_to_extension.gif)
+
+出于安全原因，您必须保持VS Code API对象私有并且确保它不会泄露到全局
+
+### 使用Web工作者
+
+Web视图中支持[Web工作者](https://developer.mozilla.org/zh-CN/docs/Web/API/Web_Workers_API/Using_web_workers)，但仍有些限制需注意
+
+首先，工作者仅使用它们的`data:`或`blob:`的URI时加载。您不可以直接在扩展文件夹中加载一个工作者
+
+如果您需要在您的扩展中从JavaScript文件加载工作者代码，试试使用`fetch:`：
+
+```typescript
+const workerSource = 'absolute/path/to/worker.js';
+
+fetch(workerSource)
+  .then(result => result.blob())
+  .then(blob => {
+    const blobUrl = URL.createObjectURL(blob);
+    new Worker(blobUrl);
+  });
+```
+
+工作者脚本同样不支持使用`importScripts`或`import(...)`导入源代码。如果您的工作者动态加载代码，试试使用如`webpack`的打包器来打包工作者脚本为单个文件
+
+您可以通过`LimitChunkCountPlugin`来在使用`webpack`时强制加载已编译工作者JavaScript为单个文件
+
+```typescript
+const path = require('path');
+const webpack = require('webpack');
+
+module.exports = {
+  target: 'webworker',
+  entry: './worker/src/index.js',
+  output: {
+    filename: 'worker.js',
+    path: path.resolve(__dirname, 'media')
+  },
+  plugins: [
+    new webpack.optimize.LimitChunkCountPlugin({
+      maxChunks: 1
+    })
+  ]
+};
+```
+
+## 安全
+
+与任何网页一样，当创建一个Web视图时，您必须跟随一些最好的安全基础练习
+
+### 限制能力
+
+一个Web视图应最小一套其需要的功能。例如，如果您的Web视图不需要运行脚本，不要设置`enableScripts: true`。如果您的Web视图不需要从用户工作空间加载资源，设置`localResourceRoot`为`[vscode.Uri.file(extensionContext.extensionPath)]`或甚至`[]`来禁用所有本地资源的访问
+
+### 内容安全协议
+
+[内容安全协议](https://developers.google.com/web/fundamentals/security/csp/)更深入地限制了Web视图中可以加载和执行的内容。例如，一个内容安全协议可以确保只有一系列允许的脚本可以在Web视图中运行，或甚至告诉Web视图只加载`https`下的图像
+
+要添加一个内容安全协议，在Web视图`<head>`顶部放入一个`<meta http-equiv="Content-Security-Policy">`指令
+
+```typescript
+function getWebviewContent() {
+  return `<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none';">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Cat Coding</title>
+</head>
+<body>
+    ...
+</body>
+</html>`;
+}
+```
