--- a/4. 扩展指南/7. Web视图.md
+++ b/4. 扩展指南/7. Web视图.md
@@ -941,3 +941,24 @@ function getWebviewContent() {
 </html>`;
 }
 ```
+
+协议`default-src 'none';`禁用所有内容。然后我们可以使之变回我们扩展工作所需的最少内容。这里是允许加载本地脚本和样式表并加载`https`下图像的内容安全协议
+
+```html
+<meta
+  http-equiv="Content-Security-Policy"
+  content="default-src 'none'; img-src ${webview.cspSource} https:; script-src ${webview.cspSource}; style-src ${webview.cspSource};"
+/>
+```
+
+`${webview.cspSource}`值是来自Webview本身的值的占位符。参阅[Web视图示例](https://github.com/microsoft/vscode-extension-samples/blob/main/webview-sample)获得如何使用此值的完整示例
+
+这个内容安全协议同样完全禁用了内联脚本和样式表。引用所有的内联脚本和样式表到外部文件是一个最佳实践，以此来使它们可以在不放宽内容安全协议时正确加载
+
+### 仅加载https下的内容
+
+如果您的Web视图允许加载外部资源，强烈建议您只允许这些资源在`https`而不是`http`下加载。上面的示例内容安全协议已经通过只允许加载`https`下的图像这么做了
+
+### 无害化所有用户输入
+
+就像你对一个普通网页会做的一样
