--- a/附录-译名表.md
+++ b/附录-译名表.md
@@ -1,38 +1,43 @@
 | 原文 | 译名 | 简介 |
 | - | - | - |
-| Extension | 扩展 | VS Code中用于扩展功能的插件 |
+| adapter | 适配器 ||
+| auto-indentation | 自动缩进 ||
+| Bracket Matching | 括号匹配 ||
 | build | 构建 ||
-| generator | 生成器 ||
-| generate | 生成 ||
-| Extension Development Host | 扩展开发宿主 ||
+| CodeLens | 代码透镜 ||
 | command | 命令 ||
 | Command Palette | 命令面板 ||
-| notification | 通知 ||
-| message | 消息 ||
-| overview | 概览 ||
-| manifest | 清单 ||
-| debug | 调试 ||
-| run | 运行 ||
-| register | 注册 ||
 | configuration | 配置 ||
-| Quick Pick | 快速拾取 ||
-| theme | 主题 ||
-| event | 事件 ||
 | Contribution Point | 贡献点 ||
-| field | 字段 ||
-| test | 测试 ||
-| publish | 发布 ||
-| declarative | 声明 ||
-| snippet | 片段 ||
-| Bracket Matching | 括号匹配 ||
-| auto-indentation | 自动缩进 ||
-| syntax | 句法 ||
-| highlight | 高亮 ||
-| IntelliSense | 智能感知 ||
-| Hovers | 悬浮提示 ||
-| Go to Definitions | 转到定义 ||
-| Diagnostic Errors | 错误诊断 ||
-| CodeLens | 代码透镜 ||
+| debug | 调试 ||
 | debugger | 调试器 ||
+| declarative | 声明 ||
+| Diagnostic Errors | 错误诊断 ||
+| editor | 编辑器 ||
+| event | 事件 ||
+| extension | 扩展 | VS Code中用于扩展功能的插件 |
+| Extension Development Host | 扩展开发宿主 ||
+| field | 字段 ||
+| function | 函数 ||
+| generate | 生成 ||
+| generator | 生成器 ||
+| Go to Definitions | 转到定义 ||
+| highlight | 高亮 ||
+| Hovers | 悬浮提示 ||
+| IntelliSense | 智能感知 ||
+| manifest | 清单 ||
+| message | 消息 ||
+| method | 方法 ||
+| notification | 通知 ||
+| overview | 概览 ||
+| publish | 发布 ||
+| Quick Pick | 快速拾取 ||
+| register | 注册 ||
+| run | 运行 ||
 | runtime | 运行时 ||
-| Adapter | 适配器 ||
+| snippet | 片段 ||
+| syntax | 句法 ||
+| test | 测试 ||
+| theme | 主题 ||
+| webview | Web视图 ||
+| window | 窗口 ||
