完成web视图无害化所有用户输入翻译

--- a/4. 扩展指南/7. Web视图.md
+++ b/4. 扩展指南/7. Web视图.md
@@ -961,4 +961,14 @@ function getWebviewContent() {
 
 ### 无害化所有用户输入
 
-就像你对一个普通网页会做的一样
+就像你对一个普通网页会做的一样，当为Web视图构造HTML时，您必须无害化所有用户输入。如果不能正确无害化输入，可能允许将导致用户面临安全风险的内容注入
+
+必须重视无害化示例：
+
+- 文件内容
+- 文件与文件夹路径
+- 用户和工作空间设置
+
+考虑使用一个帮助库来构造您的HTML字符串，或至少确保所有来自用户工作空间的内容正确无害化
+
+永远不要在安全上只依赖无害化。确保遵守其他的合适的安全习惯，例如拥有一个 [内容安全协议](#内容安全协议)来最小化任何可能的内容注入的影响
