添加Web视图部分翻译

--- a/4. 扩展指南/7. Web视图.md
+++ b/4. 扩展指南/7. Web视图.md
@@ -972,3 +972,33 @@ function getWebviewContent() {
 考虑使用一个帮助库来构造您的HTML字符串，或至少确保所有来自用户工作空间的内容正确无害化
 
 永远不要在安全上只依赖无害化。确保遵守其他的合适的安全习惯，例如拥有一个 [内容安全协议](#内容安全协议)来最小化任何可能的内容注入的影响
+
+## 保持
+
+在标准Web视图[生命周期](#生命周期)，Web视图由`createWebviewPanel`创建并且由`.dispose()`调用或用户关闭它们时销毁。然而Web视图内容是在当Web视图变可见时创建，Web视图移至后台时销毁。当Web视图移动至后台栏时，任何Web视图内状态将丢失
+
+最好的解决这个的办法是时你的Web视图无状态。使用[消息传递](#脚本与消息传递)来保存Web视图的状态，然后在Web视图再次可见时恢复状态
+
+### getState与setState
+
+在Web视图内运行的脚本可以使用`getState`和`setState`方法来保存并恢复成一个JSON可序列化状态对象。这个状态甚至在Web视图面板变为隐藏，Web视图内容本身销毁时保持。状态在Web视图面板销毁时销毁
+
+```typescript
+// 在Web视图脚本当中
+const vscode = acquireVsCodeApi();
+
+const counter = document.getElementById('lines-of-code-counter');
+
+// 检查我们是否有旧状态来恢复
+const previousState = vscode.getState();
+let count = previousState ? previousState.count : 0;
+counter.textContent = count;
+
+setInterval(() => {
+  counter.textContent = count++;
+  // 更新保存的状态
+  vscode.setState({ count });
+}, 100);
+```
+
+`getState`和`setState`是更受喜爱保持状态的方法，因为它们有比`retainContextWhenHidden`更低的性能开支
