完成部分翻译

--- a/4. 扩展指南/7. Web视图.md
+++ b/4. 扩展指南/7. Web视图.md
@@ -1002,3 +1002,45 @@ setInterval(() => {
 ```
 
 `getState`和`setState`是更受喜爱保持状态的方法，因为它们有比`retainContextWhenHidden`更低的性能开支
+
+### 序列化
+
+通过实现`WebviewPanelSerializer`，您的Web视图可以在VS Code重启时自动恢复。序列化以`getState`和`setState`为基础，并且只在您的扩展为您的Web视图注册`WebviewPanelSerializer`时启用
+
+为了使我们的编程猫在VS Code重启时继续存在，首先在扩展`package.json`添加一个`onWebviewPanel`启用事件
+
+```json
+"activationEvents": [
+    ...,
+    "onWebviewPanel:catCoding"
+]
+```
+
+这个启用事件确保我们的扩展无论何时VS Code需要使用viewType`catCoding`恢复Web视图，我们的扩展都将会启用
+
+然后，在我们扩展的`activate`方法，调用`registerWebviewPanelSerializer`来注册一个新的`WebviewPanelSerializer`。`WebviewPanelSerializer`负责从保持的状态恢复Web视图内容。这个内容是Web视图内容使用`setState`设置的JSON二进制大对象
+
+```typescript
+export function activate(context: vscode.ExtensionContext) {
+  // 普通启动...
+
+  // 确保我们为我们的Web视图类型注册一个序列化器
+  vscode.window.registerWebviewPanelSerializer('catCoding', new CatCodingSerializer());
+}
+
+class CatCodingSerializer implements vscode.WebviewPanelSerializer {
+  async deserializeWebviewPanel(webviewPanel: vscode.WebviewPanel, state: any) {
+    // `state`是在Web视图`state`中使用`setState`保持的状态
+    console.log(`Got state: ${state}`);
+
+    // 恢复Web视图内容
+    //
+    // 确保我们将有`webviewPanel`传递到此
+    // 同样恢复我们在它上需要的任何事件监听器
+    webviewPanel.webview.html = getWebviewContent();
+  }
+}
+```
+
+现在如果您在打开编程猫面板时重启VS Code，面板将自动在相同的编辑器位置恢复
+
