提交保持翻译

--- a/4. 扩展指南/7. Web视图.md
+++ b/4. 扩展指南/7. Web视图.md
@@ -1044,3 +1044,60 @@ class CatCodingSerializer implements vscode.WebviewPanelSerializer {
 
 现在如果您在打开编程猫面板时重启VS Code，面板将自动在相同的编辑器位置恢复
 
+### retainContextWhenHidden
+
+对于有着非常复杂以至于无法快速保存恢复的UI或状态的Web视图，您可以使用`retainContextWhenHidden`选项替代。这个选项使Web视图保持它的内容在上面但是在一个隐藏的状态内，甚至当Web视图本身不在前景时
+
+即使**编程猫**很难说有复杂的状态，但是让我们尝试启用`retainContextWhenHidden`来看看这个选项如何改变一个Web视图的行为：
+
+```typescript
+import * as vscode from 'vscode';
+
+export function activate(context: vscode.ExtensionContext) {
+  context.subscriptions.push(
+    vscode.commands.registerCommand('catCoding.start', () => {
+      const panel = vscode.window.createWebviewPanel(
+        'catCoding',
+        'Cat Coding',
+        vscode.ViewColumn.One,
+        {
+          enableScripts: true,
+          retainContextWhenHidden: true
+        }
+      );
+      panel.webview.html = getWebviewContent();
+    })
+  );
+}
+
+function getWebviewContent() {
+  return `<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cat Coding</title>
+</head>
+<body>
+    <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" width="300" />
+    <h1 id="lines-of-code-counter">0</h1>
+
+    <script>
+        const counter = document.getElementById('lines-of-code-counter');
+
+        let count = 0;
+        setInterval(() => {
+            counter.textContent = count++;
+        }, 100);
+    </script>
+</body>
+</html>`;
+}
+```
+
+![](https://code.visualstudio.com/assets/api/extension-guides/webview/persistence-retrain.gif)
+
+注意计数器不再在Web视图隐藏时重置并在稍后恢复。没有额外需要的代码！使用`retainContextWhenHidden`，Web视图扮演着与一个Web浏览器后台栏类似的角色。脚本和其他动态内容暂停，但是一旦Web视图再次变得可见便立即恢复。您不能发送消息给一个隐藏的Web视图，甚至在`retainContextWhenHidden`启用时
+
+即使`retainContextWhenHidden`可能令人震惊，但是牢记这有着高内存支出，仅应当在其他保持技术不运作时使用
+
