完成Web视图翻译

--- a/4. 扩展指南/7. Web视图.md
+++ b/4. 扩展指南/7. Web视图.md
@@ -1101,3 +1101,14 @@ function getWebviewContent() {
 
 即使`retainContextWhenHidden`可能令人震惊，但是牢记这有着高内存支出，仅应当在其他保持技术不运作时使用
 
+## 无障碍
+
+`vscode-using-screen-reader`类将添加入您Web视图内容中的用户使用屏幕阅读器操作VS Code的主体。另外，`vscode-reduce-motion`类将在某些情况下加入用户已经表达偏好的文档主体元素来降低窗口运动量。通过观察这些类并根据此调整您的渲染，您的Web视图内容可在反应用户偏好方面变得更好。
+
+## 下步
+
+如果您想要学习更多关于VS Code扩展，尝试这些主题：
+
+- [扩展API](/1.%20概览.md) - 了解关于整个VS Code扩展API
+
+- [扩展功能](/3.%20扩展功能/1.%20概览.md) - 看一看扩展VS Code的其他方式
