提交笔记本第二部分翻译

--- a/4. 扩展指南/8. 笔记本.md
+++ b/4. 扩展指南/8. 笔记本.md
@@ -12,3 +12,113 @@
 
 ![](https://code.visualstudio.com/assets/api/extension-guides/notebook/architecture-overview.png)
 
+## 序列化器
+
+[NotebookSerializer API Reference](https://github.com/microsoft/vscode/blob/e1a8566a298dcced016d8e16db95c33c270274b4/src/vs/vscode.d.ts#L11865-L11884)
+
+一个`NotebookSerializer`负责序列化一个笔记本为字节并反序列化字节为笔记本，它包括一系列Markdown和代码单元格。它同样负责相互转换：拿取`NotebookData`并转换数据为序列化字节来保存
+
+例如：
+- [JSON笔记本序列化器](https://github.com/microsoft/notebook-extension-samples/tree/main/notebook-serializer)：简单的示例笔记本，将JSON输入输出美化为自定义`NotebookRendered`
+- [Markdown序列化器](https://github.com/microsoft/vscode-markdown-notebook)：在笔记本中打开并编辑Markdown文件
+
+### 示例
+
+在这个示例中，我们构建一个简化的笔记本供应者扩展来在[Jupyter笔记本格式](https://nbformat.readthedocs.io/en/latest/format_description.html)中查看文件
+
+一个笔记本序列化器在如下`package.json`下的`contributes.notebooks`字段中声明：
+
+```json
+{
+    ...
+    "contributes": {
+        ...
+        "notebooks": [
+            {
+                "type": "my-notebook",
+                "displayName": "My Notebook",
+                "selector": [
+                    {
+                        "filenamePattern": "*.notebook"
+                    }
+                ]
+            }
+        ]
+    }
+}
+```
+
+笔记本序列化器随后在扩展启用事件中注册
+
+```typescript
+import { TextDecoder, TextEncoder } from 'util';
+import * as vscode from 'vscode';
+
+export function activate(context: vscode.ExtensionContext) {
+  context.subscriptions.push(
+    vscode.workspace.registerNotebookSerializer('my-notebook', new SampleSerializer())
+  );
+}
+
+interface RawNotebook {
+  cells: RawNotebookCell[];
+}
+
+interface RawNotebookCell {
+  source: string[];
+  cell_type: 'code' | 'markdown';
+}
+
+class SampleSerializer implements vscode.NotebookSerializer {
+  async deserializeNotebook(
+    content: Uint8Array,
+    _token: vscode.CancellationToken
+  ): Promise<vscode.NotebookData> {
+    var contents = new TextDecoder().decode(content);
+
+    let raw: RawNotebookCell[];
+    try {
+      raw = (<RawNotebook>JSON.parse(contents)).cells;
+    } catch {
+      raw = [];
+    }
+
+    const cells = raw.map(
+      item =>
+        new vscode.NotebookCellData(
+          item.cell_type === 'code'
+            ? vscode.NotebookCellKind.Code
+            : vscode.NotebookCellKind.Markup,
+          item.source.join('\n'),
+          item.cell_type === 'code' ? 'python' : 'markdown'
+        )
+    );
+
+    return new vscode.NotebookData(cells);
+  }
+
+  async serializeNotebook(
+    data: vscode.NotebookData,
+    _token: vscode.CancellationToken
+  ): Promise<Uint8Array> {
+    let contents: RawNotebookCell[] = [];
+
+    for (const cell of data.cells) {
+      contents.push({
+        cell_type: cell.kind === vscode.NotebookCellKind.Code ? 'code' : 'markdown',
+        source: cell.value.split(/\r?\n/g)
+      });
+    }
+
+    return new TextEncoder().encode(JSON.stringify(contents));
+  }
+}
+```
+
+现在尝试运行您的扩展并打开一个保存于`.notebook`格式的Jupyter笔记本格式文件
+
+![](https://code.visualstudio.com/assets/api/extension-guides/notebook/ipynb-simple-provider.png)
+
+您应该可以打开Jupyter格式笔记本并用普通文本和渲染的Markdown查看它们的单元格并编辑单元格。然而，输出并不会保存在磁盘中；为了保存输出，您需要从`NotebookData`序列化并反序列化输出
+
+要运行一个单元格，您需要实现一个`NotebookController`
