提交笔记本第三部分

--- a/4. 扩展指南/8. 笔记本.md
+++ b/4. 扩展指南/8. 笔记本.md
@@ -122,3 +122,73 @@ class SampleSerializer implements vscode.NotebookSerializer {
 您应该可以打开Jupyter格式笔记本并用普通文本和渲染的Markdown查看它们的单元格并编辑单元格。然而，输出并不会保存在磁盘中；为了保存输出，您需要从`NotebookData`序列化并反序列化输出
 
 要运行一个单元格，您需要实现一个`NotebookController`
+
+## 控制器
+
+[NotebookController API参考]
+
+一个`NotebookController`负责处理一个**代码单元格**并执行代码产生一些或没有输出
+
+一个控制器直接关联笔记本序列化器并在创建控制器时通过设置`NotebookController#notebookType`属性关联一类笔记本。然后控制器通过将控制器推入在扩展启用中的扩展订阅来全局注册
+
+```typescript
+export function activate(context: vscode.ExtensionContext) {
+  context.subscriptions.push(new Controller());
+}
+
+class Controller {
+  readonly controllerId = 'my-notebook-controller-id';
+  readonly notebookType = 'my-notebook';
+  readonly label = 'My Notebook';
+  readonly supportedLanguages = ['python'];
+
+  private readonly _controller: vscode.NotebookController;
+  private _executionOrder = 0;
+
+  constructor() {
+    this._controller = vscode.notebooks.createNotebookController(
+      this.controllerId,
+      this.notebookType,
+      this.label
+    );
+
+    this._controller.supportedLanguages = this.supportedLanguages;
+    this._controller.supportsExecutionOrder = true;
+    this._controller.executeHandler = this._execute.bind(this);
+  }
+
+  private _execute(
+    cells: vscode.NotebookCell[],
+    _notebook: vscode.NotebookDocument,
+    _controller: vscode.NotebookController
+  ): void {
+    for (let cell of cells) {
+      this._doExecution(cell);
+    }
+  }
+
+  private async _doExecution(cell: vscode.NotebookCell): Promise<void> {
+    const execution = this._controller.createNotebookCellExecution(cell);
+    execution.executionOrder = ++this._executionOrder;
+    execution.start(Date.now()); // 保持追踪经过的时间来执行单元格
+
+    /* 在这执行一些东西；未实现 */
+
+    execution.replaceOutput([
+      new vscode.NotebookCellOutput([
+        vscode.NotebookCellOutputItem.text('Dummy output text!')
+      ])
+    ]);
+    execution.end(true, Date.now());
+  }
+}
+```
+
+如果您单独从序列化器中发布一个提供`NotebookController`扩展，那么添加如`notebookKernel<ViewTypeUpperCamelCased>`的入口到`package.json`的`keywords`。例如，如果您在为`github-issues`笔记本类型发布一个可替代核心，您应当添加一个关键词`notebookKernelGithubIssues`到您的扩展
+
+示例：
+
+- [Github Issues Notebook](https://github.com/microsoft/vscode-github-issue-notebooks/blob/93359d842cd01dfaef0a78b620c5a3b4cf5c2e38/src/extension/notebookProvider.ts#L29): 执行Github Issues查询的控制器
+- [REST Book](https://github.com/tanhakabir/rest-book/blob/main/src/extension/notebookKernel.ts): 运行REST查询的控制器
+- [Regexper notebooks](https://github.com/jrieken/vscode-regex-notebook/blob/master/src/extension/extension.ts#L56)： 可视化正则表达式的控制器
+
