--- a/4. 扩展指南/8. 笔记本.md
+++ b/4. 扩展指南/8. 笔记本.md
@@ -192,3 +192,8 @@ class Controller {
 - [REST Book](https://github.com/tanhakabir/rest-book/blob/main/src/extension/notebookKernel.ts): 运行REST查询的控制器
 - [Regexper notebooks](https://github.com/jrieken/vscode-regex-notebook/blob/master/src/extension/extension.ts#L56)： 可视化正则表达式的控制器
 
+## 输出类型
+
+输出必须是三种格式之一：文本输出、错误或富输出。一个核心可能为一个单元格的执行提供多种输出，在这种情况下它们将呈列表显示
+
+如文本输出类的简单输出、错误输出或“简单”类的富输出（HTML、Markdown、JSON之类）由VS Code核心渲染，然而应用程序特定富输出类型由[NotebookRendered](#NotebookRendered)渲染
