--- a/4. 扩展指南/8. 笔记本.md
+++ b/4. 扩展指南/8. 笔记本.md
@@ -196,4 +196,34 @@ class Controller {
 
 输出必须是三种格式之一：文本输出、错误或富输出。一个核心可能为一个单元格的执行提供多种输出，在这种情况下它们将呈列表显示
 
-如文本输出类的简单输出、错误输出或“简单”类的富输出（HTML、Markdown、JSON之类）由VS Code核心渲染，然而应用程序特定富输出类型由[NotebookRendered](#NotebookRendered)渲染
+如文本输出类的简单输出、错误输出或“简单”类的富输出（HTML、Markdown、JSON之类）由VS Code核心渲染，然而应用程序特定富输出类型由[NotebookRendered](#NotebookRendered)渲染。一个扩展也许可选自渲染“简单的”富输出，例如给Markdown输出添加LaTex支持
+
+![](https://code.visualstudio.com/assets/api/extension-guides/notebook/kernel.png)
+
+### 文本输出
+
+文本输出是最简单的输出格式，并且与您熟悉的许多交互式解释器相似。它们仅由在单元格输出元素渲染作普通文本的`text`字段组成
+
+```typescript
+vscode.NotebookCellOutputItem.text('This is the output...');
+```
+
+![](https://code.visualstudio.com/assets/api/extension-guides/notebook/text-output.png)
+
+### 错误输出
+
+错误输出对于用一致可理解的风格显示运行时错误来说很有用。它们支持标准`Error`对象
+
+```typescript
+try {
+  /* 一些代码 */
+} catch (error) {
+  vscode.NotebookCellOutputItem.error(error);
+}
+```
+
+![](https://code.visualstudio.com/assets/api/extension-guides/notebook/error-output.png)
+
+### 富输出
+
+富输出是最高级的显示单元格输出的形式。它们允许提供许多不同的输出数据表现，
