--- a/4. 扩展指南/8. 笔记本.md
+++ b/4. 扩展指南/8. 笔记本.md
@@ -226,4 +226,43 @@ try {
 
 ### 富输出
 
-富输出是最高级的显示单元格输出的形式。它们允许提供许多不同的输出数据表现，
+富输出是最高级的显示单元格输出的形式。它们允许提供许多不同由MIME类型键入的输出数据表现。例如，如果一个单元格输出要表现一个GitHub Issue，核心可能会产生一个`data`字段有几个属性的富输出
+
+- `text/html`字段包含一个Issue的格式化视图
+- `text/x-json`字段包含一个机器可读视图
+- `application/github-issue`可以被`NotebookRendered`能够用于创建一个Issue的完全可交互视图
+
+在这种情况下，`text/html`和`text/x-json`视图将被VS Code本地渲染，但`application/github-issue`视图如果没有`NotebookRendered`注册在MIME类型，将显示错误
+
+```typescript
+execution.replaceOutput([new vscode.NotebookCellOutput([
+                            vscode.NotebookCellOutputItem.text('<b>Hello</b> World', 'text/html'),
+                            vscode.NotebookCellOutputItem.json({ hello: 'world' }),
+                            vscode.NotebookCellOutputItem.json({ custom-data-for-custom-renderer: 'data' }, 'application/custom'),
+                        ])]);
+```
+
+默认，VS Code可以渲染下列MIME类型：
+
+- application/javascript
+- text/html
+- image/svg+xml
+- text/markdown
+- image/png
+- image/jpg
+- text/plain
+
+VS Code将在内建编辑器渲染这些MIME类型为代码：
+
+- text/x-json
+- text/x-javascript
+- text/x-html
+- text/x-rust
+- ... text/x-LANGUAGE_ID 给任何其他内建或已安装语言
+
+笔记本使用内建编辑器显示一些Rust代码
+
+![](https://code.visualstudio.com/assets/api/extension-guides/notebook/rust-output.png)
+
+为了显示一个可选择的MIME类型，`NotebookRendered`必须为那个MIME类型注册
+
