--- a/4. 扩展指南/8. 笔记本.md
+++ b/4. 扩展指南/8. 笔记本.md
@@ -266,3 +266,39 @@ VS Code将在内建编辑器渲染这些MIME类型为代码：
 
 为了显示一个可选择的MIME类型，`NotebookRendered`必须为那个MIME类型注册
 
+## 笔记本渲染器
+
+笔记本渲染器负责提供特定MIME类型输出数据一个已渲染的视图。一个由输出单元格共享的渲染器可以维持单元格间全局状态。已渲染视图的复杂都可以从简单的静态HTML到动态完全可交互小程序。在这小节，我们将探索不同的渲染GitHub Issue输出表现的技巧
+
+您可以快速从您的Yeoman生成器快速使用样本文件。要这么做，首先使用下面代码安装Yeoman和VS Code生成器：
+
+```shell
+npm install -g yo generator-code
+```
+
+然后，运行`yo code`并选择`New Notebook Renderer (TypeScript)`
+
+如果您不使用这个模板，您只需确保您添加了`notebookRendered`到您的扩展中的`package.json`里的`keywords`，并在扩展名称或简介的某些地方提及它的MIME类型，如此用户可以找到您的渲染器
+
+### 一个简单、无交互的渲染器
+
+渲染器通过在扩展中的`package.json`贡献`contributes.notebookRenderer`属性为一套MIME类型而声明。这个渲染器将工作于`ms-vscode.github-issue-notebook/github-issue`格式的输入，它是我们假定一些已安装的控制器能够提供的：
+
+```json
+{
+  "activationEvents": ["...."],
+  "contributes": {
+    ...
+    "notebookRenderer": [
+      {
+        "id": "github-issue-renderer",
+        "displayName": "GitHub Issue Renderer",
+        "entrypoint": "./out/renderer.js",
+        "mimeTypes": [
+          "ms-vscode.github-issue-notebook/github-issue"
+        ]
+      }
+    ]
+  }
+}
+```
