提交部分翻译

--- a/4. 扩展指南/8. 笔记本.md
+++ b/4. 扩展指南/8. 笔记本.md
@@ -302,3 +302,50 @@ npm install -g yo generator-code
   }
 }
 ```
+为了确保它们不会意外干涉或使VS Code性能下降，输出渲染器永远在单个独立于VS Code UI剩余部分的`iframe`中渲染。贡献指向一个在任何输出需要渲染前加载到笔记本`iframe`中的“入口”脚本。您的入口需要是您可以自己编写的单个文件或者使用如Webpacker、Rollup或Percal打包器来创建一个
+
+当它被加载时，一旦VS Code准备好您的渲染器，您的入口脚本应该从`vscode-notebook-rendered`导出`ActivationFunction`来渲染您的UI。例如，这将放入所有您的JSON格式Github Issue数据到单元格
+
+```typescript
+import type { ActivationFunction } from 'vscode-notebook-renderer';
+
+export const activate: ActivationFunction = context => ({
+  renderOutputItem(data, element) {
+    element.innerText = JSON.stringify(data.json());
+  }
+});
+```
+
+您可以[在这找到完整的API定义](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/vscode-notebook-renderer/index.d.ts)。如果您正在使用TypeScript，您可以在您的`tsconfig.json`中安装`@types/vscode-notebook-renderer`并添加`vscode-notebook-renderer`到`types`数组来使这些类型在脚本中启用
+
+要创建更丰富的内容，您可以手动创建DOM元素，或使用一个如Preact框架并渲染到输出元素，例如：
+
+```typescript
+import type { ActivationFunction } from 'vscode-notebook-renderer';
+import { h, render } from 'preact';
+
+const Issue: FunctionComponent<{ issue: GithubIssue }> = ({ issue }) => (
+  <div key={issue.number}>
+    <h2>
+      {issue.title}
+      (<a href={`https://github.com/${issue.repo}/issues/${issue.number}`}>#{issue.number}</a>)
+    </h2>
+    <img src={issue.user.avatar_url} style={{ float: 'left', width: 32, borderRadius: '50%', marginRight: 20 }} />
+    <i>@{issue.user.login}</i> Opened: <div style="margin-top: 10px">{issue.body}</div>
+  </div>
+);
+
+const GithubIssues: FunctionComponent<{ issues: GithubIssue[]; }> = ({ issues }) => (
+  <div>{issues.map(issue => <Issue key={issue.number} issue={issue} />)}</div>
+);
+
+export const activate: ActivationFunction = (context) => ({
+    renderOutputItem(data, element) {
+        render(<GithubIssues issues={data.json()} />, element);
+    }
+});
+```
+
+在一个输出单元格使用`ms-vscode.github-issue-notebook/github-issue`数据字段运行这个渲染器给我们下面静态HTML视图：
+
+![](https://code.visualstudio.com/assets/api/extension-guides/notebook/static-renderer-sample.png)
